--- a/实验详情/lab/Lab1a-c.html
+++ b/实验详情/lab/Lab1a-c.html
@@ -10,12 +10,12 @@
 				gl_Position = vPosition;
 			}
 		</script>
-	   <!-- 	<script id="fragment-shader" type="x-shader/x-fragment">
+	   <!-- <script id="fragment-shader" type="x-shader/x-fragment">
 			precision mediump float;
 			void main(){
 			 gl_FragColor = vec4( 1.0, 0.0, 0.0, 1.0 );
 			}
-		</script> -->
+		</script> 原代码-->
 		
 		<script id="fragment-shader" type="x-shader/x-fragment">
 			precision mediump float;
@@ -23,6 +23,7 @@
 			 gl_FragColor = vec4( 0.0, 0.0, 1.0, 1.0 );
 			}
 		</script>
+		<!-- 任务a 修改三角形颜色 -->
 		
 		
 		
