--- a/实验详情/实验详情.html
+++ b/实验详情/实验详情.html
@@ -21,14 +21,20 @@
 			<table width="800" align="center" height="300">
 			<tr>	
 			<td align="left" style="font-size:100%;color:rosybrown;font-family: "arial narrow"">
-			<a href="lab/Lab1.html"><img src="小白.gif" width=100 height=100/>Lab1</a>
+			<a href="lab/Lab1a-c.html"><img src="小白.gif" width=100 height=100/>Lab1a-c</a>
+		    <br>
+			<br>
+			<a href="lab/Lab1d-e.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab1d-e</a>
 			</td>
 			</tr>
 			
 			<table width="800" align="center" height="300">
 			<tr>	
 			<td align="left" style="font-size:100%;color:rosybrown;font-family: "arial narrow"">
-			<a href="https://www.baidu.com/"><img src="小白.gif" width=100 height=100/>Lab2</a>
+			<a href="lab/Lab2-a.html"><img src="小白.gif" width=100 height=100/>Lab2-a</a>
+			<br>
+			<br>
+			<a href="lab/Lab2-b.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab2-b</a>
 			</td>
 			</tr>
 		</div>
