--- a/实验详情/lab/Lab2-b.html
+++ b/实验详情/lab/Lab2-b.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="common/initShaders.js"></script>
     <script type="text/javascript" src="common/gl-matrix-min.js"></script>
 
-    <script type="text/javascript" src="gasket-3d.js"></script>
+    <script type="text/javascript" src="common/gasket-3d.js"></script>
 </head>
 
 <body>
