--- a/实验详情/实验详情.html
+++ b/实验详情/实验详情.html
@@ -18,23 +18,28 @@
 	</head>
 	<body>
 		<div>
-			<table width="800" align="center" height="300">
+			<table width="800" align="center" height="200">
 			<tr>	
-			<td align="left" style="font-size:100%;color:rosybrown;font-family: "arial narrow"">
-			<a href="lab/Lab1a-c.html"><img src="小白.gif" width=100 height=100/>Lab1a-c</a>
+			<td align="left" style="font-size:80%;color:rosybrown;font-family: "arial narrow"">
+			<a href="lab/Lab1a-c.html"><img src="小白.gif" width=100 height=100/>&nbsp;Lab1a-c</a>
 		    <br>
 			<br>
-			<a href="lab/Lab1d-e.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab1d-e</a>
+			<a href="lab/Lab1d-e.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab1d-e</a>
 			</td>
 			</tr>
 			
-			<table width="800" align="center" height="300">
+			<table width="800" align="center" height="200">
 			<tr>	
-			<td align="left" style="font-size:100%;color:rosybrown;font-family: "arial narrow"">
-			<a href="lab/Lab2-a.html"><img src="小白.gif" width=100 height=100/>Lab2-a</a>
+			<td align="left" style="font-size:80%;color:rosybrown;font-family: "arial narrow"">
+			<a href="lab/Lab2-a.html"><img src="小白.gif" width=100 height=100/>&nbsp;Lab2-a</a>
 			<br>
 			<br>
-			<a href="lab/Lab2-b.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab2-b</a>
+			<a href="lab/Lab2-b.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab2-b</a>
+			<a href="lab/Lab2-c.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab2-c</a>
+			<br>
+			<br>
+			<a href="lab/Lab2-d.html">&nbsp;&nbsp;&nbsp;Lab2-d</a>
+			<a href="lab/Lab2-e.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab2-e</a>
 			</td>
 			</tr>
 		</div>
