--- a/实验详情/实验详情.html
+++ b/实验详情/实验详情.html
@@ -18,7 +18,16 @@
 	</head>
 	<body>
 		<div>
-			<table width="800" align="center" height="200">
+			<table width="800" align="left" height="100">
+			<tr>	
+			<td align="left" style="font-size:80%;color:rosybrown;font-family: "arial narrow"">
+			<a href="lab/Lab0.html"><img src="小白.gif" width=100 height=100/>&nbsp;Lab0</a>
+			</td>
+			</tr>
+			
+			
+			
+			<table width="800" align="center" height="100">
 			<tr>	
 			<td align="left" style="font-size:80%;color:rosybrown;font-family: "arial narrow"">
 			<a href="lab/Lab1a-c.html"><img src="小白.gif" width=100 height=100/>&nbsp;Lab1a-c</a>
@@ -28,7 +37,7 @@
 			</td>
 			</tr>
 			
-			<table width="800" align="center" height="200">
+			<table width="800" align="left" height="100">
 			<tr>	
 			<td align="left" style="font-size:80%;color:rosybrown;font-family: "arial narrow"">
 			<a href="lab/Lab2-a.html"><img src="小白.gif" width=100 height=100/>&nbsp;Lab2-a</a>
@@ -42,6 +51,19 @@
 			<a href="lab/Lab2-e.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab2-e</a>
 			</td>
 			</tr>
+			
+			
+			<table width="800" align="center" height="100">
+			<tr>	
+			<td align="left" style="font-size:80%;color:rosybrown;font-family: "arial narrow"">
+			<a href="lab/Lab3-a.html"><img src="小白.gif" width=100 height=100/>&nbsp;Lab3-a</a>
+			<br>
+			<br>
+			<a href="lab/tree.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My tree</a>
+			<a href="lab/Lab3-b.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab3-b</a>
+			</td>
+			</tr>
+			
 		</div>
 	</body>
 </html>
