--- a/实验详情/lab/Lab3-a.html
+++ b/实验详情/lab/Lab3-a.html
@@ -33,7 +33,7 @@
     <script type="text/javascript" src="common/initShaders.js"></script>
     <script type="text/javascript" src="common/gl-matrix-min.js"></script>
 
-    <script type="text/javascript" src="common/rotsquaremenu.js"></script>
+    <script type="text/javascript" src="js/rotsquaremenu.js"></script>
 </head>
 
 <body onload="initRotSquare()">
