--- a/实验详情/lab/Lab4-a.html
+++ b/实验详情/lab/Lab4-a.html
@@ -55,7 +55,7 @@
     <script type="text/javascript" src="common/initShaders.js"></script>
     <script type="text/javascript" src="common/gl-matrix-min.js"></script>
     
-    <script type="text/javascript" src="common/rotcube.js"></script>
+    <script type="text/javascript" src="js/rotcube.js"></script>
 </head>
 
 <body>
