--- a/实验详情/lab/Lab1a-c.html
+++ b/实验详情/lab/Lab1a-c.html
@@ -32,7 +32,7 @@
 		<script type="text/javascript" src="common/initShaders.js"></script>
 		<script type="text/javascript" src="common/gl-matrix-min.js"></script>
 		<!-- 绘制三角形的JS代码 -->
-		<script type="text/javascript" src="common/triangle.js"></script>
+		<script type="text/javascript" src="js/triangle.js"></script>
 	</head>
 	<body>
 		<canvas id="triangle-canvas" style="border:none;" width="500" height="500"></canvas>
