--- a/实验详情/lab/Lab3-b.html
+++ b/实验详情/lab/Lab3-b.html
@@ -34,7 +34,7 @@
     <script type="text/javascript" src="common/initShaders.js"></script>
     <script type="text/javascript" src="common/gl-matrix-min.js"></script>
 
-    <script type="text/javascript" src="common/rotsquareslider.js"></script>
+    <script type="text/javascript" src="js/rotsquareslider.js"></script>
 </head>
 
 <body onload="initRotSquare()">
