--- a/实验详情/实验详情.html
+++ b/实验详情/实验详情.html
@@ -18,32 +18,24 @@
 	</head>
 	<body>
 		<div>
-			<table width="800" align="left" height="100">
+			<table width="950" align="left" height="70">
+			<table width="950" align="left" height="100">
 			<tr>	
 			<td align="left" style="font-size:80%;color:rosybrown;font-family: "arial narrow"">
-			<a href="lab/Lab0.html"><img src="小白.gif" width=100 height=100/>&nbsp;Lab0</a>
+			<a href="lab/Lab0.html"><img src="小白2.gif" width=50 height=50/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab0</a>
+			
+			<td align="center" style="font-size:80%;color:rosybrown;font-family: "arial narrow"">
+			<a href="lab/Lab1a-c.html"><img src="小白2.gif" width=50 height=50/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab1a-c</a>
+			<br>
+			<br>
+			<a href="lab/Lab1d-e.html">Lab1d-e</a>
 			</td>
-			</tr>
 			
-			
-			
-			<table width="800" align="center" height="100">
-			<tr>	
-			<td align="left" style="font-size:80%;color:rosybrown;font-family: "arial narrow"">
-			<a href="lab/Lab1a-c.html"><img src="小白.gif" width=100 height=100/>&nbsp;Lab1a-c</a>
-		    <br>
-			<br>
-			<a href="lab/Lab1d-e.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab1d-e</a>
-			</td>
-			</tr>
-			
-			<table width="800" align="left" height="100">
-			<tr>	
-			<td align="left" style="font-size:80%;color:rosybrown;font-family: "arial narrow"">
-			<a href="lab/Lab2-a.html"><img src="小白.gif" width=100 height=100/>&nbsp;Lab2-a</a>
+			<td align="right" style="font-size:80%;color:rosybrown;font-family: "arial narrow"">
+			<a href="lab/Lab2-a.html"><img src="小白2.gif" width=50 height=50/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab2-a</a>
 			<br>
 			<br>
-			<a href="lab/Lab2-b.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab2-b</a>
+			<a href="lab/Lab2-b.html">Lab2-b</a>
 			<a href="lab/Lab2-c.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab2-c</a>
 			<br>
 			<br>
@@ -51,19 +43,50 @@
 			<a href="lab/Lab2-e.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab2-e</a>
 			</td>
 			</tr>
-			
-			
-			<table width="800" align="center" height="100">
+	  
+			<table width="950" align="left" height="100">
+				
+			<table width="850" align="left" height="100">
 			<tr>	
 			<td align="left" style="font-size:80%;color:rosybrown;font-family: "arial narrow"">
-			<a href="lab/Lab3-a.html"><img src="小白.gif" width=100 height=100/>&nbsp;Lab3-a</a>
+			<a href="lab/Lab3-a.html"><img src="小白1.gif" width=50 height=50/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab3-a</a>
 			<br>
 			<br>
-			<a href="lab/tree.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My tree</a>
-			<a href="lab/Lab3-b.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab3-b</a>
+			<a href="lab/tree.html">My tree</a>
+			<a href="lab/Lab3-b.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab3-b</a>
+			</td>
+			
+			<td align="center" style="font-size:80%;color:rosybrown;font-family: "arial narrow"">
+			<a href="lab/Lab4-a.html"><img src="小白1.gif" width=50 height=50/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab4-a</a>
+			<br>
+			<br>
+			<a href="lab/Lab4-b.html">Lab4-b</a>
+			<a href="lab/Lab4-c.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab4-c</a>
+			<br>
+			<br>
+			<a href="lab/Lab4-d.html">Lab4-d</a>
+			<a href="lab/Lab4-e.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab4-e</a>
+			</td>
+			
+			<td align="right" style="font-size:80%;color:rosybrown;font-family: "arial narrow"">
+			<a href="lab/Lab0.html"><img src="小白1.gif" width=50 height=50/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab5</a>
 			</td>
 			</tr>
-			
+			<table width="950" align="left" height="100">
+				
+			<table width="700" align="left" height="100">
+			<tr>	
+			<td align="left" style="font-size:80%;color:rosybrown;font-family: "arial narrow"">
+			<a href="lab/Lab6-a.html"><img src="小白2.gif" width=50 height=50/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab6-a</a>
+			<br>
+			<br>
+			<a href="lab/Lab6-b.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab6-b</a>
+			<a href="lab/Lab6-c.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lab6-c</a>
+			</td>	
+			<td align="left" style="font-size:100%;color:rosybrown;font-family: "arial narrow"">
+			<a href="lab/index.html"><img src="小白2.gif"width=50 height=50/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;课程设计</a>
+			</td>
+			</tr>
 		</div>
 	</body>
 </html>
