--- a/实验详情/lab/Lab2-c.html
+++ b/实验详情/lab/Lab2-c.html
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="common/initShaders.js"></script>
     <script type="text/javascript" src="common/gl-matrix-min.js"></script>
 
-    <script type="text/javascript" src="js/gasket-triangles1.js"></script>
+    <script type="text/javascript" src="js/Lab2-c.js"></script>
 </head>
 
 <body>
