--- a/实验详情/lab/Lab3-a.html
+++ b/实验详情/lab/Lab3-a.html
@@ -33,11 +33,11 @@
     <script type="text/javascript" src="common/initShaders.js"></script>
     <script type="text/javascript" src="common/gl-matrix-min.js"></script>
 
-    <script type="text/javascript" src="js/rotsquaremenu.js"></script>
+    <script type="text/javascript" src="js/Lab3-a.js"></script>
 </head>
 
 <body onload="initRotSquare()">
-    <h1>Control rotation using Menus</h1><br>
+    <h1>使用菜单控制旋转</h1><br>
     <canvas id="rot-canvas" width="512" height="512">你的浏览器不支持HTML5 canvas元素</canvas>
     <fieldset>
         <legend>转动控制</legend>
