--- a/实验详情/lab/tree.html
+++ b/实验详情/lab/tree.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <title>My tree</title>
-  <h3>This is a magic tree</h3>
+  <h3>叮~这是一棵能许愿的圣诞树哦</h3>
  <script type="text/javascript" src="common/webgl-utils.js"></script>
     <script type="text/javascript" src="common/initShaders.js"></script>
     <script type="text/javascript" src="common/gl-matrix-min.js"></script>
