--- a/实验详情/lab/Lab3-b.html
+++ b/实验详情/lab/Lab3-b.html
@@ -34,11 +34,11 @@
     <script type="text/javascript" src="common/initShaders.js"></script>
     <script type="text/javascript" src="common/gl-matrix-min.js"></script>
 
-    <script type="text/javascript" src="js/rotsquareslider.js"></script>
+    <script type="text/javascript" src="js/Lab3-b.js"></script>
 </head>
 
 <body onload="initRotSquare()">
-    <h3>This is a magic tree</h3>
+    <h3>叮~这是一棵有魔法的圣诞树哦</h3>
     <canvas id="rot-canvas" width="512" height="512">你的浏览器不支持HTML5 canvas元素</canvas>
     <fieldset>
         <legend>转动控制</legend>
