--- a/实验详情/lab/Lab4-d.html
+++ b/实验详情/lab/Lab4-d.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=utf-8">
-	<title>Lab4-d</title>
+	<title>Lab4_d</title>
 	<script id="vertex-shader" type="x-shader/x-vertex">
 	attribute vec4 vPosition;
 	attribute vec4 vColor;
@@ -29,10 +29,10 @@
 	<script type="text/javascript" src="common/initShaders.js"></script>
 	<script type="text/javascript" src="common/gl-matrix-min.js"></script>
 	
-	<script type="text/javascript" src="js/rotcubetrack.js"></script>
+	<script type="text/javascript" src="js/Lab4-d.js"></script>
 </head>
 <body onload="initCube()">
-<h1>旋转的立方体-跟踪球控制</h1>
+<h1>鼠标模拟的跟踪球控制立方体</h1>
 <canvas id="gl-canvas" width="512" height="512">
 你的浏览器不支持HTML5 canvas元素
 </canvas>
